--- a/FragmentLayoutProba/res/layout-land/main.xml
+++ b/FragmentLayoutProba/res/layout-land/main.xml
@@ -3,7 +3,7 @@
     			android:orientation="horizontal"
 				android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <fragment	
+    <fragment	class="com.example.fragmentlayoutproba.TitlesFragment"
             	android:id="@+id/titles"
             	android:layout_weight="1"
             	android:layout_width="0px"
