--- a/FragmentLayoutProba/res/layout/main.xml
+++ b/FragmentLayoutProba/res/layout/main.xml
@@ -1,8 +1,10 @@
 <FrameLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
     			android:layout_width="match_parent"
     			android:layout_height="match_parent">
-    <fragment	
+
+    <fragment	class="com.example.fragmentlayoutproba.TitlesFragment"
             	android:id="@+id/titles"
             	android:layout_width="match_parent"
-            	android:layout_height="match_parent" />
+            	android:layout_height="match_parent"/>
+
 </FrameLayout>
